Add color functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <button>Set Grid</button>
+    <label for="input">
+        Choose your color
+        <input type="color">
+    </label>
+    
     <div class="container"></div>
 </body>
 </html>
