--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <title>Document</title>
 </head>
 <body>
-    <button>Set Grid</button>
-    <label for="input">
-        Choose your color
-        <input type="color">
-    </label>
+    <div class="control">
+        <h1>Etch A Sketch</h1>
+        <button>Set Grid</button>
+        <label for="input">
+            Choose your color
+            <input type="color">
+        </label>
+    </div>
     
     <div class="container"></div>
 </body>
